[tool.poetry]
name = "booking_parser"
version = "0.1.0"
description = ""
authors = ["Leonid Krapchatov <hellsing1998nsk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
lxml = "^4.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
